--- a/Deployment.yml
+++ b/Deployment.yml
@@ -29,7 +29,7 @@ spec:
   ports:
   - port: 80
     targetPort: 80
-  type: ClusterIP
+  type: LoadBalancer
  
 ---
 apiVersion: apps/v1
@@ -63,7 +63,7 @@ spec:
   ports:
   - port: 80
     targetPort: 80
-  type: ClusterIP
+  type: LoadBalancer
  
 ---
 apiVersion: apps/v1
@@ -97,7 +97,7 @@ spec:
   ports:
   - port: 80
     targetPort: 80
-  type: ClusterIP
+  type: LoadBalancer
  
 ---
 apiVersion: apps/v1
@@ -131,4 +131,4 @@ spec:
   ports:
   - port: 80
     targetPort: 80
-  type: ClusterIP
+  type: LoadBalancer
